screen flash on mobile temp fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+ background-color: #000;
 }
 
 /* ======MY ADDITIONS====== */
